package models

import (
	"errors"
	"fmt"
	"sort"
	"time"

	"github.com/gofrs/uuid/v5"
)

// ViewerVote is the current viewer's vote state for a post or comment.
type ViewerVote string

const (
	// ViewerVoteLike means the current viewer liked the resource.
	ViewerVoteLike ViewerVote = "like"
	// ViewerVoteDislike means the current viewer disliked the resource.
	ViewerVoteDislike ViewerVote = "dislike"
	// ViewerVoteNone means the current viewer has not voted on the resource.
	ViewerVoteNone ViewerVote = "none"
)

// VoteValue is a persisted vote value. It excludes the derived "none" state.
type VoteValue string

const (
	// VoteValueLike stores a like vote.
	VoteValueLike VoteValue = "like"
	// VoteValueDislike stores a dislike vote.
	VoteValueDislike VoteValue = "dislike"
)

// PostPrivacy is the visibility mode for non-group profile posts.
type PostPrivacy string

const (
	// PostPrivacyPublic makes a post visible to all authenticated users.
	PostPrivacyPublic PostPrivacy = "public"
	// PostPrivacyAlmostPrivate makes a post visible to accepted followers.
	PostPrivacyAlmostPrivate PostPrivacy = "almost_private"
	// PostPrivacyPrivate makes a post visible only to selected accepted followers.
	PostPrivacyPrivate PostPrivacy = "private"
)

// PublicUser contains only identity fields safe to embed in another response.
type PublicUser struct {
	ID        uuid.UUID
	FirstName string
	LastName  string
	Nickname  *string
	Avatar    *string
}

// PublicUserResponse is the public user shape embedded by post and comment DTOs.
type PublicUserResponse struct {
	ID        uuid.UUID `json:"id"`
	FirstName string    `json:"first_name"`
	LastName  string    `json:"last_name"`
	Nickname  *string   `json:"nickname"`
	Avatar    *string   `json:"avatar"`
}

// MapPublicUserResponse maps a public user record to its safe response DTO.
func MapPublicUserResponse(user *PublicUser) (PublicUserResponse, error) {
	if user == nil {
		return PublicUserResponse{}, errors.New("public user is required")
	}
	return PublicUserResponse{
		ID:        user.ID,
		FirstName: user.FirstName,
		LastName:  user.LastName,
		Nickname:  user.Nickname,
		Avatar:    user.Avatar,
	}, nil
}

// Post is the database representation of a social post.
type Post struct {
	ID           uuid.UUID
	UserID       *uuid.UUID
	GroupID      *uuid.UUID
	Content      string
	ImageURL     *string
	Privacy      PostPrivacy
	CommentCount int
	LikeCount    int
	DislikeCount int
	CreatedAt    time.Time
	UpdatedAt    *time.Time
	DeletedAt    *time.Time
}

// PostAudience records one selected follower allowed to view a private post.
type PostAudience struct {
	PostID uuid.UUID
	UserID uuid.UUID
}

// PostVote records one user's current vote on a post.
type PostVote struct {
	PostID    uuid.UUID
	UserID    uuid.UUID
	Vote      VoteValue
	CreatedAt time.Time
	UpdatedAt *time.Time
}

// VoteSummary contains current vote counts plus the current viewer's vote.
type VoteSummary struct {
	LikeCount    int        `json:"like_count"`
	DislikeCount int        `json:"dislike_count"`
	ViewerVote   ViewerVote `json:"viewer_vote"`
}

// PostQuery filters reusable post-list repository reads.
type PostQuery struct {
	AuthorID *uuid.UUID
	GroupID  *uuid.UUID
	Limit    int
	Offset   int
}

// PostWithAuthor is a repository read model with hydrated author and viewer state.
type PostWithAuthor struct {
	Post       Post
	Author     *PublicUser
	ViewerVote ViewerVote
}

// PostResponse is implemented by active and deleted post response DTOs.
type PostResponse interface {
	isPostResponse()
}

// ActivePostResponse is the full API DTO for a visible, non-deleted post.
type ActivePostResponse struct {
	ID           uuid.UUID          `json:"id"`
	Deleted      bool               `json:"deleted"`
	Author       PublicUserResponse `json:"author"`
	GroupID      *uuid.UUID         `json:"group_id"`
	Content      string             `json:"content"`
	ImageURL     *string            `json:"image_url"`
	Privacy      PostPrivacy        `json:"privacy"`
	CommentCount int                `json:"comment_count"`
	LikeCount    int                `json:"like_count"`
	DislikeCount int                `json:"dislike_count"`
	ViewerVote   ViewerVote         `json:"viewer_vote"`
	CreatedAt    time.Time          `json:"created_at"`
	UpdatedAt    *time.Time         `json:"updated_at"`
}

// DeletedPostResponse is the minimal API tombstone for a soft-deleted post.
type DeletedPostResponse struct {
	ID      uuid.UUID `json:"id"`
	Deleted bool      `json:"deleted"`
}

func (*ActivePostResponse) isPostResponse()  {}
func (*DeletedPostResponse) isPostResponse() {}

// MapPostResponse maps a repository post row to a safe active or tombstone DTO.
func MapPostResponse(row *PostWithAuthor) (PostResponse, error) {
	if row == nil {
		return nil, errors.New("post row is required")
	}
	if row.Post.DeletedAt != nil {
		return &DeletedPostResponse{
			ID:      row.Post.ID,
			Deleted: true,
		}, nil
	}

	author, err := MapPublicUserResponse(row.Author)
	if err != nil {
		return nil, fmt.Errorf("map active post author: %w", err)
	}

	return &ActivePostResponse{
		ID:           row.Post.ID,
		Deleted:      false,
		Author:       author,
		GroupID:      row.Post.GroupID,
		Content:      row.Post.Content,
		ImageURL:     row.Post.ImageURL,
		Privacy:      row.Post.Privacy,
		CommentCount: row.Post.CommentCount,
		LikeCount:    row.Post.LikeCount,
		DislikeCount: row.Post.DislikeCount,
		ViewerVote:   normalizeViewerVote(row.ViewerVote),
		CreatedAt:    row.Post.CreatedAt,
		UpdatedAt:    row.Post.UpdatedAt,
	}, nil
}

// Comment is the database representation of a post comment or nested reply.
type Comment struct {
	ID              uuid.UUID
	PostID          uuid.UUID
	UserID          *uuid.UUID
	ParentCommentID *uuid.UUID
	Content         string
	ImageURL        *string
	LikeCount       int
	DislikeCount    int
	CreatedAt       time.Time
	DeletedAt       *time.Time
	UpdatedAt       *time.Time
}

// CommentVote records one user's current vote on a comment.
type CommentVote struct {
	CommentID uuid.UUID
	UserID    uuid.UUID
	Vote      VoteValue
	CreatedAt time.Time
	UpdatedAt *time.Time
}

// CommentWithAuthor is a repository read model with hydrated author and viewer state.
type CommentWithAuthor struct {
	Comment    Comment
	Author     *PublicUser
	ViewerVote ViewerVote
}

// CommentResponse is implemented by active and deleted comment response DTOs.
type CommentResponse interface {
	isCommentResponse()
}

// ActiveCommentResponse is the full API DTO for a visible, non-deleted comment.
type ActiveCommentResponse struct {
	ID              uuid.UUID          `json:"id"`
	Deleted         bool               `json:"deleted"`
	PostID          uuid.UUID          `json:"post_id"`
	ParentCommentID *uuid.UUID         `json:"parent_comment_id"`
	Author          PublicUserResponse `json:"author"`
	Content         string             `json:"content"`
	ImageURL        *string            `json:"image_url"`
	LikeCount       int                `json:"like_count"`
	DislikeCount    int                `json:"dislike_count"`
	ViewerVote      ViewerVote         `json:"viewer_vote"`
	CreatedAt       time.Time          `json:"created_at"`
	UpdatedAt       *time.Time         `json:"updated_at"`
	Replies         []CommentResponse  `json:"replies"`
}

// DeletedCommentResponse is the minimal API tombstone for a soft-deleted comment.
type DeletedCommentResponse struct {
	ID      uuid.UUID         `json:"id"`
	Deleted bool              `json:"deleted"`
	Replies []CommentResponse `json:"replies"`
}

func (*ActiveCommentResponse) isCommentResponse()  {}
func (*DeletedCommentResponse) isCommentResponse() {}

// MapCommentResponse maps one comment row and already-mapped replies to a safe DTO.
func MapCommentResponse(row *CommentWithAuthor, replies []CommentResponse) (CommentResponse, error) {
	if row == nil {
		return nil, errors.New("comment row is required")
	}
	if replies == nil {
		replies = []CommentResponse{}
	}
	if row.Comment.DeletedAt != nil {
		return &DeletedCommentResponse{
			ID:      row.Comment.ID,
			Deleted: true,
			Replies: replies,
		}, nil
	}

	author, err := MapPublicUserResponse(row.Author)
	if err != nil {
		return nil, fmt.Errorf("map active comment author: %w", err)
	}

	return &ActiveCommentResponse{
		ID:              row.Comment.ID,
		Deleted:         false,
		PostID:          row.Comment.PostID,
		ParentCommentID: row.Comment.ParentCommentID,
		Author:          author,
		Content:         row.Comment.Content,
		ImageURL:        row.Comment.ImageURL,
		LikeCount:       row.Comment.LikeCount,
		DislikeCount:    row.Comment.DislikeCount,
		ViewerVote:      normalizeViewerVote(row.ViewerVote),
		CreatedAt:       row.Comment.CreatedAt,
		UpdatedAt:       row.Comment.UpdatedAt,
		Replies:         replies,
	}, nil
}

// MapCommentTree maps a flat repository result into recursively nested safe DTOs.
func MapCommentTree(rows []*CommentWithAuthor) ([]CommentResponse, error) {
	nodes := make(map[uuid.UUID]*commentNode, len(rows))
	order := make([]uuid.UUID, 0, len(rows))

	for _, row := range rows {
		if row == nil {
			return nil, errors.New("comment tree contains nil row")
		}
		if _, exists := nodes[row.Comment.ID]; exists {
			return nil, fmt.Errorf("duplicate comment row %s", row.Comment.ID)
		}
		nodes[row.Comment.ID] = &commentNode{row: row, replies: []CommentResponse{}}
		order = append(order, row.Comment.ID)
	}

	sort.SliceStable(order, func(i, j int) bool {
		return nodes[order[i]].row.Comment.CreatedAt.Before(nodes[order[j]].row.Comment.CreatedAt)
	})

	roots := make([]CommentResponse, 0)
	for i := len(order) - 1; i >= 0; i-- {
		id := order[i]
		node := nodes[id]
		response, err := MapCommentResponse(node.row, node.replies)
		if err != nil {
			return nil, err
		}
		if node.row.Comment.ParentCommentID == nil {
			roots = append([]CommentResponse{response}, roots...)
			continue
		}
		parent, ok := nodes[*node.row.Comment.ParentCommentID]
		if !ok {
			return nil, fmt.Errorf("comment %s references missing parent %s", id, *node.row.Comment.ParentCommentID)
		}
		parent.replies = append([]CommentResponse{response}, parent.replies...)
	}

	if roots == nil {
		return []CommentResponse{}, nil
	}
	return roots, nil
}

type commentNode struct {
	row     *CommentWithAuthor
	replies []CommentResponse
}

func normalizeViewerVote(vote ViewerVote) ViewerVote {
	switch vote {
	case ViewerVoteLike, ViewerVoteDislike:
		return vote
	default:
		return ViewerVoteNone
	}
}
